Fixing dead space created by removing the secondary nav on tablets

--- a/src/styles/_page-layout.scss
+++ b/src/styles/_page-layout.scss
@@ -412,6 +412,9 @@ html .hero {
   position: relative;
   &.shift-down {
     margin-bottom: 190px;
+    @include media("<laptop") {
+      margin-bottom: 0;
+    }
   }
   &:after {
     display: block;
